src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

body {
  background-color: #d0d0d0;
  overscroll-behavior-y: contain;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.background-image {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-image: url("../public/background.jpg");
  background-size: cover;
  background-position: center;
  opacity: 0.075;
  z-index: -1;
}

html, body, #root {
  height: 100%;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
}

.app-container {
  height: calc(var(--vh, 1vh) * 100);
  overflow: auto;
  display: flex;
  flex-direction: column;
}

